// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ticket Tailor Coldharbour Blue retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 10800000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/offbeatfolkfilm/2006867",
        "notes": "",
        "status": {},
        "time": 1769110200000,
      },
    ],
    "showingId": "tickettailor.com-2006867",
    "title": "OffBeat Presents: The London Premiere of Welcome to the Orchard of England",
    "url": "https://www.tickettailor.com/events/offbeatfolkfilm/2006867",
  },
]
`;

exports[`Ticket Tailor Good Shepherd Studios retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 9000000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/weflockcic/1964917",
        "notes": "",
        "status": {},
        "time": 1769715000000,
      },
    ],
    "showingId": "tickettailor.com-1964917",
    "title": "London Short Film Festival @ GSS: Paving Paradise",
    "url": "https://www.tickettailor.com/events/weflockcic/1964917",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 7200000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/weflockcic/1933734",
        "notes": "",
        "status": {},
        "time": 1771529400000,
      },
    ],
    "showingId": "tickettailor.com-1933734",
    "title": "Zodiac Killer Project + Charlie Shackleton Q&A",
    "url": "https://www.tickettailor.com/events/weflockcic/1933734",
  },
]
`;

exports[`Ticket Tailor Siobhan Davies Studios retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/maghrebcine/1992420",
        "notes": "",
        "status": {},
        "time": 1770474600000,
      },
    ],
    "showingId": "tickettailor.com-1992420",
    "title": "Film screening: The Blue Caftan / أزرق القفطان / Le Bleu du caftan (2022)",
    "url": "https://www.tickettailor.com/events/maghrebcine/1992420",
  },
]
`;
